# service/DefaultService.js
@@ -1,15 +1,0 @@
-'use strict';
-
-
-/**
- * Delete Caption
- * Delete Caption
- *
- * no response value expected for this operation
- **/
-exports.deleteCaption = function() {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
