# service/RoutescaptionsService.js
@@ -15,6 +15,19 @@ exports.addCaption = function() {
 
 
 /**
+ * Delete Caption
+ * Delete Caption
+ *
+ * no response value expected for this operation
+ **/
+exports.deleteCaption = function() {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
+
+/**
  * Get Caption by Id
  * Get Caption by Id
  *
